Added devise to project

--- a/app/views/shared/_header.html.slim
+++ b/app/views/shared/_header.html.slim
@@ -7,11 +7,14 @@ nav.navbar.navbar-expand-lg.navbar-dark.bg-dark
   #navbarNav.collapse.navbar-collapse
     ul.navbar-nav
 
-      li.nav-item[class='#{request.path == root_path ? 'active' : ''}']
-        = link_to 'Home', root_path, class: 'nav-link'
+      li.nav-item
+        = link_to 'Home', root_path, class: "nav-link #{request.path == root_path ? 'active' : ''}"
 
-      li.nav-item[class='#{request.path == users_path ? 'active' : ''}']
-        = link_to 'Users', root_path, class: 'nav-link'
+      / li.nav-item[class='#{request.path == '' ? 'active' : ''}']
+      /   = link_to 'Users', root_path, class: 'nav-link'
+
+      li.nav-item[class='#{request.path == new_user_session_path ? 'active' : ''}']
+        = link_to 'Log In', new_user_session_path, class: "nav-link #{request.path == new_user_session_path ? 'active' : ''}"
 
       / li.nav-item
         / a.nav-link[href="#"]
