--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -1,2 +1,25 @@
-h1
-  | #{@user.email}
+.h-100.d-flex.align-items-center.justify-content-center
+  .card.border-dark.shadow.p-3.w-50.m-5
+    table.table.table-striped.table-hover.mb-5
+      tbody
+        tr
+          td = 'ID'
+          td = @user.id
+        tr
+          td = 'Email'
+          td = @user.email
+        tr
+          td = 'Role'
+          td = Role.find_by(id: @user.roles_id).role_name
+        tr
+          td = 'Created at'
+          td = @user.created_at
+        tr
+          td = 'Updated at'
+          td = @user.updated_at
+          - if Role.find_by(id: current_user.roles_id).can_destroy == true && current_user != @user
+            tr
+              td
+                = button_to 'Удалить', user_path, method: :delete, class: 'btn btn-danger m-1'
+                = link_to 'Редактировать', root_path, class: 'btn btn-warning m-1'
+              td
