--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -1,3 +1,5 @@
 div id='home-index'
-  h1
-    | Home page
+  .h-100.d-flex.align-items-center.justify-content-center
+    .card.border-dark.shadow.p-3.w-50.m-5.text-center
+      h2
+        | Добро пожаловать на главную страниицу
